@@ -82,6 +82,7 @@ Engine fixes:
 * Fixed delete save dialog being shown underneath buttons on load screen.
 * Fixed bug where closing the game with the "Enter Amount" dialog open allowed for item duplication.
 * Added tooltips for stat and power upgrade buttons.
+* Fixed case where stash tabs could be switched while dragging an item.
 * Android: Fix 'Flare' directory not being automatically created.
 * Android: Added a dialog to direct the player to the wiki page for installing if no game data is found.
 
